--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">actvFerorantes</string>
+    <string name="edit_button_description">\n</string>
+    <string name="delete_button_description" />
 </resources>
